# lol-ai-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
knowledge/: core_theory.md
knowledge/fundamentals/: trading.md  wave_management.md
knowledge/macro/: objectives.md
knowledge/mental/: vod_review.md
scripts/: analyze_player.py  run_discord_bot.py
src/: __init__.py  config.py  exceptions.py  logging_config.py  validation.py
src/analysis/: __init__.py  pattern_detector.py
src/api/: __init__.py  riot.py
src/coach/: __init__.py  claude_coach.py  intents.py  knowledge.py  vod_review.py
src/db/: __init__.py  database.py  repositories.py  schema.sql
src/discord_bot/: __init__.py  bot.py  memory.py  missions.py  voice.py
src/models/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_matches.py
tests/integration/: __init__.py  test_claude_coach.py
tests/unit/: __init__.py  test_config.py  test_validation.py
